# SLAE_4semester

./: CMakeLists.txt  CSR.cpp  CSR.h  Householder.cpp  Householder.h  README.md  Tester.cc  Tester_CSR.cc  Thridiagonal_matrix.cpp  Triplex.cpp
Controls/Control2/Task1/: Task1.cpp  Task1.txt  Task1_1_1.cpp  Task1_1_1.txt  Task1_1_2.cpp  Task1_1_2.txt  Task1_1_3.cpp  Task1_1_3.txt  Task1_1_4.cpp  Task1_1_4.txt  Task1_2.cpp  Task1_2.txt  Task1_addition.cpp
Controls/Control2/Task2/: Task2_1.cpp  Task2_1.txt  Task2_2.cpp  Task2_2.txt
Iteration_methods/: CSR.cpp  CSR.h  Task3.cpp  Task4_minimum.txt
TESTS/: CMakeLists.txt  Tester.cc  Tester_CSR.cc
src/: CMakeLists.txt  CSR.cpp  CSR.h  Complete_matrix.cpp  Complete_matrix.h  Solver.cpp  Solver.h  Thridiagonal_matrix.cpp  Thridiagonal_matrix.h
