cmake_minimum_required(VERSION 3.24)

include(FetchContent)
FetchContent_Declare(
        googletest
        URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
)

set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(googletest)

include(GoogleTest)
enable_testing()

add_executable(
        CSRTest
        Tester.cc
)
target_link_libraries(
        CSRTest
        GTest::gtest_main
        slae_demo
)
target_include_directories(CSRTest PRIVATE ${CMAKE_SOURCE_DIR})

gtest_discover_tests(CSRTest)



